build/production/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: production
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/api_production:latest
        resources:
          requests:
            memory: "700Mi"
            cpu: "600m"
          limits:
            memory: "700Mi"
            cpu: "600m"
        ports:
        - containerPort: 80
