build/production/api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # Docs: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations

    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/enable-cors: "false"

    # Rate limiting
    # limit-rpm = limit each IP address to X requests per minute
    # limit-whitelist = do not rate limit clients in the IP range
    nginx.ingress.kubernetes.io/limit-rpm: "120"
    # nginx.ingress.kubernetes.io/limit-whitelist: "comma separated list of CIDRs"

  name: api-ingress
  namespace: production
  labels:
    app: "api"
spec:
  rules:
    - host: api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: api-service
              servicePort: 80
